crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__module_recovery_barriers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
module recovery.barriers {
  exports z.api target;
  exports a.api to alpha.target;
  opens z.internal target;
  opens a.internal to alpha.target;
  provides z.Service implementation.Type;
  provides a.Service with alpha.Implementation;
}

formatted:
module recovery.barriers {
  exports z.api target;
  exports a.api to alpha.target;
  opens z.internal target;
  opens a.internal to alpha.target;
  provides z.Service implementation.Type;
  provides a.Service with alpha.Implementation;
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(43), end: TextSize(49) }) message=expected `to` before module target list
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(103), end: TextSize(109) }) message=expected `to` before module target list
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(168), end: TextSize(182) }) message=expected `with` in provides directive
