crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__module_repeated_requires_modifiers.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
module com.example.repeated { requires static /* JOLT-TRIVIA:repeated-requires-static */ static dependency; }

formatted:
module com.example.repeated {
  requires static /* JOLT-TRIVIA:repeated-requires-static */ dependency;
}

diagnostics:
(none)
