crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__phase_15_statements.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class Phase15Statements {
  void enhancedFor(int[] values) {
    for (int value = /* enhanced-initializer */ 0 : values) {}
    for (int first, /* enhanced-extra */ second : values) {}
    for (int value, /* enhanced-trailing */ : values) {}
  }

  void resources(AutoCloseable existing) {
    try (AutoCloseable missing /* resource-initializer */) {}
    try (AutoCloseable first = open(), /* resource-extra */ second = open()) {}
    try (AutoCloseable first = open(), /* resource-trailing */) {}
    try (/* resource-missing-access */) {}
    try (existing /* resource-junk */ @) {}
    try (call() /* resource-invalid-access */) {}
    try (var malformed = /* resource-trailing */ ;) {}
    try {} catch (Exception exception /* catch-dimension */ []) {}
  }

  void switches(int value) {
    switch (value) {
      /* switch-unowned */ @;
      case 1 when ready() -> use();
      case 2 /* case-junk */ @ -> use();
      case 3 -> /* switch-empty-rule */ ;
      case 4:
      /* switch-label-sibling */ case : use();
      case String text when (/* guard-open */ ??? /* guard-close */) -> use();
    }
  }

  void missingIf(boolean value) { if (value) }
  void missingElse(boolean value) { if (value) {} else }
  void missingWhile(boolean value) { while (value) }
  void missingDo(boolean value) { do while (value); }
  void missingFor() { for (;;) }
  void missingEnhancedFor(int[] values) { for (int value : values) }
  void missingSwitch(int value) { switch (value) }
  void missingSynchronized(Object lock) { synchronized (lock) }

  void missingTry() {
    try
    catch (Exception exception)
    finally
  }

  void missingResourceTry(AutoCloseable resource) {
    try (resource)
    catch (Exception exception) {}
  }
}

formatted:
class Phase15Statements {
  void enhancedFor(int[] values) {
    for (int value = /* enhanced-initializer */ 0 : values) {
    }
    for (int first, /* enhanced-extra */ second : values) {
    }
    for (int value, /* enhanced-trailing */ : values) {
    }
  }

  void resources(AutoCloseable existing) {
    try (
      AutoCloseable missing /* resource-initializer */
    ) {
    }
    try (
      AutoCloseable first = open(), /* resource-extra */ second = open()
    ) {
    }
    try (
      AutoCloseable first = open(), /* resource-trailing */
    ) {
    }
    try ( /* resource-missing-access */

    ) {
    }
    try (
      existing /* resource-junk */ @
    ) {
    }
    try (
      call() /* resource-invalid-access */
    ) {
    }
    try (
      var malformed = /* resource-trailing */ ;
    ) {
    }
    try {
    } catch (Exception exception /* catch-dimension */[]) {
    }
  }

  void switches(int value) {
    switch (value) {
      /* switch-unowned */
      @;
      case 1 when ready() -> use();
      case  2 /* case-junk */ @ -> use();
      case 3 -> /* switch-empty-rule */ ;
      case 4:
      /* switch-label-sibling */
      case :
        use();
      case String text when ( /* guard-open */ ? ? ? /* guard-close */  ) ->
        use();
    }
  }

  void missingIf(boolean value) {
    if (value) 
  }

  void missingElse(boolean value) {
    if (value) {
    }else
  }

  void missingWhile(boolean value) {
    while (value) 
  }

  void missingDo(boolean value) {
    do  while (value);
  }

  void missingFor() {
    for (;;) 
  }

  void missingEnhancedFor(int[] values) {
    for (int value : values) 
  }

  void missingSwitch(int value) {
    switch (value) 
  }

  void missingSynchronized(Object lock) {
    synchronized (lock) 
  }

  void missingTry() {
    try  catch (Exception exception)  finally 
  }

  void missingResourceTry(AutoCloseable resource) {
    try (
      resource
    )  catch (Exception exception) {
    }
  }
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(109), end: TextSize(110) }) message=enhanced for variable must not have an initializer
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(142), end: TextSize(143) }) message=enhanced for statement must declare a single variable
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(203), end: TextSize(204) }) message=enhanced for statement must declare a single variable
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(347), end: TextSize(348) }) message=expected resource initializer
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(389), end: TextSize(390) }) message=resource declaration must declare a single variable
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(469), end: TextSize(470) }) message=resource declaration must declare a single variable
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(537), end: TextSize(538) }) message=expected resource
code=java.parse.invalid_resource_variable_access severity=Error stage=Parser range=Some(TextRange { start: TextSize(580), end: TextSize(581) }) message=unexpected token in resource variable access
code=java.parse.invalid_resource_variable_access severity=Error stage=Parser range=Some(TextRange { start: TextSize(631), end: TextSize(632) }) message=expected resource variable declaration or variable access
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(685), end: TextSize(686) }) message=expected expression
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(840), end: TextSize(841) }) message=expected switch label
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(841), end: TextSize(842) }) message=expected identifier
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(841), end: TextSize(842) }) message=expected expression after annotation
code=java.parse.invalid_switch_guard severity=Error stage=Parser range=Some(TextRange { start: TextSize(856), end: TextSize(860) }) message=switch guard requires a pattern
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(908), end: TextSize(909) }) message=unexpected token in case constant
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(960), end: TextSize(961) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1069), end: TextSize(1070) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1071), end: TextSize(1072) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1090), end: TextSize(1091) }) message=expected `:` in conditional expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1090), end: TextSize(1091) }) message=expected expression
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1158), end: TextSize(1159) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1215), end: TextSize(1216) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1268), end: TextSize(1269) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1307), end: TextSize(1312) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1355), end: TextSize(1356) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1424), end: TextSize(1425) }) message=expected statement
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1475), end: TextSize(1476) }) message=expected switch block
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1539), end: TextSize(1540) }) message=expected synchronized body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1576), end: TextSize(1581) }) message=expected try body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1608), end: TextSize(1615) }) message=expected catch body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1618), end: TextSize(1619) }) message=expected finally body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1696), end: TextSize(1701) }) message=expected try body
