crates/jolt_java_fmt/tests/snapshots/recovery_snapshots__phase_21_normalization_module.snap
---
source: crates/jolt_java_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
module recovered.normalization {
    uses z.Service;
    requires transitive + static a.module;
    uses a.Service;
}

formatted:
module recovered.normalization {
  uses z.Service;
  requires transitive
  + static a.module;
  uses a.Service;
}

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(77), end: TextSize(78) }) message=expected identifier
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(77), end: TextSize(78) }) message=expected `;` after requires directive
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(77), end: TextSize(78) }) message=unexpected token in module declaration
